log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: apps
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      namespace: apps
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output-reader
          image: salamy1/log-reader:v0.3
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
          volumeMounts:
            - mountPath: /usr/src/app/files
              name: shared-log-output
        - name: log-output-writer
          image: salamy1/log-writer:v0.3
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
          volumeMounts:
            - mountPath: /usr/src/app/files
              name: shared-log-output

      volumes:
        - name: shared-log-output
          persistentVolumeClaim:
            claimName: log-output-claim
